fix close button alignment and responsive styles

--- a/jsapp/scss/components/_kobo.account-settings.scss
+++ b/jsapp/scss/components/_kobo.account-settings.scss
@@ -1,10 +1,12 @@
 .account-settings {
+  @include box-shadow;
+
   padding-top: 30px;
   width: 100%;
   height: 100%;
-  background: #FFF;
+  background: $white;
   overflow-y: auto;
-  @include box-shadow;
+  position: relative;
 
   .kobo-select {
     font-size: 15px;
@@ -13,7 +15,6 @@
   .form-modal__item--column {
     width: 90%;
     height: 100%;
-    position: relative;
     margin: 0 auto;
 
     .form-modal__item--fields {
@@ -30,30 +31,34 @@
     }
 
     .form-modal__item--username {
-      min-height: 40px;
+      min-height: 32px;
 
       .account-box__initials {
         display: inline-block;
-        vertical-align: top;
+        vertical-align: middle;
         margin-right: 15px;
       }
 
       h4 {
         display: inline-block;
-        vertical-align: top;
+        vertical-align: middle;
         font-size: 16px;
       }
     }
+  }
 
-    .form-modal__item--actions {
-      position: absolute;
-      top: -12px;
-      right: -32px;
+  .account-settings__actions {
+    position: absolute;
+    top: 26px;
+    right: 0;
+
+    .account-settings-close {
+      padding: 0 12px;
     }
   }
 
   h4 {
-    margin: 0px;
+    margin: 0;
     font-weight: 400;
     color: #454e54;
   }
